<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video_black_24dp"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_trackCorona"
            android:icon="@drawable/ic_gps_fixed_black_24dp"
            android:title="@string/menu_trackCorona" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/menu_updates" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_photos" />
        <item
            android:id="@+id/nav_symptoms"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/menu_symptoms" />
    </group>
</menu>
